# highFIS

./: .pre-commit-config.yaml  CITATION.cff  README.md  conftest.py  latest  pyproject.toml  versions.json  zensical.toml
.github/workflows/: ci.yaml  docs.yml  publish-test.yml  publish.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/contributing/: index.html
0.1/htsk-modelo/: index.html
0.1/markdown/: index.html
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/api/: index.html
dev/contributing/: index.html
dev/cookbook/: index.html
dev/htsk-modelo/: index.html
dev/markdown/: index.html
dev/models/: index.html
docs/: contributing.md  htsk-modelo.md  index.md  markdown.md
docs/api/: base.md  clustering.md  defuzzifiers.md  estimators.md  gates.md  highfis.md  index.md  layers.md  memberships.md  metrics.md  mhtsk.md  models.md  optimisers.md  persistence.md  protocols.md  t_norms.md
docs/cookbook/: choosing-a-model.md  high-dimensional-feature-selection.md  index.md  interpretability.md  persistence-and-cache.md  quickstart.md
docs/guides/: caching.md  initialization.md  introspection.md  optimisers.md  tuning.md
docs/models/: adatsk.md  admtsk.md  adptsk.md  ayatsk.md  dg-aletsk.md  dg-tsk.md  dombitsk.md  fsre-adatsk.md  hdfis.md  htsk.md  index.md  logtsk.md  mhtsk.md  tsk-vanilla.md
highfis/: __init__.py  base.py  clustering.py  defuzzifiers.py  estimators.py  gates.py  layers.py  memberships.py  metrics.py  models.py  persistence.py  protocols.py  t_norms.py  version.py
highfis/estimators/: __init__.py  _adaptive.py  _base.py  _dg_aletsk.py  _dg_tsk.py  _dombi.py  _fsre.py  _gated.py  _hdfis.py  _htsk.py  _logtsk.py  _mhtsk.py  _yager.py
highfis/models/: __init__.py  _adaptive.py  _base.py  _common.py  _dg_aletsk.py  _dg_tsk.py  _dombi.py  _fsre.py  _gated.py  _hdfis.py  (+4 more)
tests/: test_adatsk.py  test_base.py  test_clustering.py  test_coverage_booster.py  test_defuzzifiers.py  test_dg_aletsk.py  test_dg_tsk.py  test_estimators.py  test_estimators_tsk.py  test_fsre_adatsk.py  test_gates.py  test_layers.py  test_logtsk.py  test_memberships.py  test_metrics.py  test_models.py  test_new_memberships.py  test_new_paper_strict.py  test_optim.py  test_persistence.py  test_protocols.py  test_public_api.py  test_t_norms.py  test_tsk_vanilla.py
v0.1/: 404.html  index.html  sitemap.xml
v0.10/: 404.html  index.html  search.json  sitemap.xml
v0.11/: 404.html  index.html  sitemap.xml
v0.12/: 404.html  index.html  search.json  sitemap.xml
v0.13/: 404.html  index.html  objects.inv  sitemap.xml
v0.14/: 404.html  index.html  objects.inv  sitemap.xml
v0.15/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.16/: 404.html  index.html  objects.inv  sitemap.xml
v0.17/: 404.html  index.html  search.json  sitemap.xml
v0.18/: 404.html  index.html  objects.inv  sitemap.xml
v0.19/: 404.html  index.html  search.json  sitemap.xml
v0.2/: 404.html  index.html  search.json  sitemap.xml
v0.20/: 404.html  index.html  search.json  sitemap.xml
v0.21/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.22/: 404.html  index.html  objects.inv  sitemap.xml
v0.23/: 404.html  index.html  search.json  sitemap.xml
v0.24/: 404.html  index.html  sitemap.xml
v0.25/: 404.html  index.html  search.json  sitemap.xml
v0.26/: 404.html  index.html  objects.inv  sitemap.xml
v0.27/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.28/: 404.html  index.html  search.json  sitemap.xml
v0.29/: 404.html  index.html  sitemap.xml
v0.3/: 404.html  index.html  search.json  sitemap.xml
v0.4/: 404.html  index.html  sitemap.xml
v0.5/: 404.html  index.html  search.json  sitemap.xml
v0.6/: 404.html  index.html  search.json  sitemap.xml
v0.7/: 404.html  index.html  sitemap.xml
v0.8/: 404.html  index.html  objects.inv  sitemap.xml
v0.9/: 404.html  index.html  objects.inv  search.json  sitemap.xml
vv0.1/: 404.html  index.html  sitemap.xml
(+842 files in other folders)
