[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "highfis"
dynamic = ["version"]
description = "highFIS is a comprehensive Python package for training and evaluating high-dimensional TSK fuzzy systems, built on PyTorch and compatible with the scikit-learn API."
authors = [{ name = "Daniel França", email = "daniel@ci.ufpb.br" }]
license = { text = "GPLv3" }
dependencies = [
    "numpy>=1.23, <3.0",
    "torch>=2.3",
    "scikit-learn>=1.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["TSK", "neuro-fuzzy", "fuzzy logic", "machine learning", "explainable ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "scikit-learn>=1.7.2",
    "ty",
    "bandit>=1.7.9",
    "hatch>=1.16.2",
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/dcruzf/highFIS"
Documentation = "https://dcruzf.github.io/highFIS/"
Source = "https://github.com/dcruzf/highFIS"
Tracker = "https://github.com/dcruzf/highFIS/issues"
DOI = "https://doi.org/10.5281/zenodo.19489225"

[tool.hatch.version]
path = 'highfis/__init__.py'

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "ruff",
    "bandit[toml]",
    "ty",
    "pre-commit",
    "coverage",
    "pytest"
]
[tool.hatch.envs.default.scripts]
security = "bandit -c pyproject.toml -r highfis/"
typing = "ty check"
install = "pre-commit install && pre-commit autoupdate"
html-report = "coverage html -d docs/assets/cov/"
all = "pre-commit run --all-files"

[tool.hatch.envs.docs]
installer = "uv"
dependencies = [
  "zensical",
]
[tool.hatch.envs.docs.scripts]
build = "zensical build --clean"
serve = "zensical serve"

[tool.hatch.build]
include = ["docs/assets/logo.svg", "LICENSE"]

[tool.hatch.build.targets.wheel]
only-include = ["highfis", "docs/assets/logo.svg", "LICENSE"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/highfis", "/tests", "/docs/assets/logo.svg", "/LICENSE"]

[tool.hatch.envs.hatch-test]
installer = "uv"
dependencies = [
    "coverage[toml]>=7.6.1",
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.3",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14","3.13", "3.12", "3.11"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage report -m --fail-under=90"

[tool.ruff]
line-length = 120
include = ["highfis/*"]

[tool.ruff.lint]
select = [
    'F',      # Pyflakes
    'E',      # pycodestyle (Error)
    'I',      # isort
    'D',      # pydocstyle
    'UP',     # pyupgrade
    'YTT',    # flake8-2020
    'B',      # flake8-bugbear
    'T10',    # flake8-debugger
    'T20',    # flake8-print
    'C4',     # flake8-comprehensions
    'PYI006', # flake8-pyi
]
ignore = ['D100', 'D104']
pydocstyle = { convention = 'google' }
isort = { known-first-party = ['highfis', 'tests'] }

[tool.ruff.lint.per-file-ignores]
'tests/*' = ['D']

[tool.pytest.ini_options]
testpaths = 'tests'
xfail_strict = true

[tool.coverage.run]
source = ['highfis']
branch = true
relative_files = true

[tool.bandit]
recursive = true
targets = ["highfis"]

[tool.ty.src]
include = ["highfis", "tests"]
